colour change + data gen script
Process movment on the same node is now coloured. File has been created
to allow generattion of testing data

--- a/src/style.css
+++ b/src/style.css
@@ -64,3 +64,15 @@ svg line, svg path {
 	/*//width: 1000px;
 	//height: 650px;*/
 }
+
+.nodeCrossing {
+	stroke: blue;
+}
+
+.coreCrossing {
+	stroke: #888888;
+}
+
+.sameCore {
+	stroke: green;
+}
